--- a/src/Aegon.Web/index.html
+++ b/src/Aegon.Web/index.html
@@ -4,10 +4,10 @@
 <head>
     <title>Aegon</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-    <link rel="stylesheet" href="topcoat/css/topcoat-mobile-light.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/aegon.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/slide.css" />
     <script type="text/javascript" src="js/lib/angular.min.js"></script>
     <script type="text/javascript" src="js/lib/angular-touch.min.js"></script>
     <script type="text/javascript" src="js/lib/angular-resource.min.js"></script>
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="js/data-services.js"></script>
 </head>
 <body ng-controller="MainCtrl">
-    <div ng-view ng-class="slide">
+    <div id="body-container" ng-view ng-class="slide">
     </div>
 </body>
 </html>
