add compare page

--- a/src/Aegon.Web/index.html
+++ b/src/Aegon.Web/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/slide.css" />
+    <link rel="stylesheet" href="css/angular.css" />
     <script type="text/javascript" src="js/lib/angular.min.js"></script>
     <script type="text/javascript" src="js/lib/angular-touch.min.js"></script>
     <script type="text/javascript" src="js/lib/angular-resource.min.js"></script>
