--- a/src/Aegon.Web/index.html
+++ b/src/Aegon.Web/index.html
@@ -9,14 +9,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/slide.css" />
     <link rel="stylesheet" href="css/angular.css" />
-    <script type="text/javascript" src="js/lib/angular.min.js"></script>
-    <script type="text/javascript" src="js/lib/angular-touch.min.js"></script>
-    <script type="text/javascript" src="js/lib/angular-resource.min.js"></script>
-    <script type="text/javascript" src="js/lib/angular-animate.min.js"></script>
-    <script type="text/javascript" src="js/lib/angular-route.min.js"></script>
-    <script type="text/javascript" src="js/data-services.js"></script>
-    <script type="text/javascript" src="js/controllers.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/bundie.js"></script>
 </head>
 <body ng-controller="MainCtrl">
     <div id="body-container" ng-view ng-class="slide">
