--- a/src/Aegon.Web/index.html
+++ b/src/Aegon.Web/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/slide.css" />
     <link rel="stylesheet" href="css/angular.css" />
-    <script type="text/javascript" src="js/bundie.js"></script>
+    <script type="text/javascript" src="js/bundle.js"></script>
 </head>
 <body ng-controller="MainCtrl">
     <div id="body-container" ng-view ng-class="slide">
