--- a/src/Aegon.Web/index.html
+++ b/src/Aegon.Web/index.html
@@ -5,11 +5,8 @@
     <title>Aegon</title>
     <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/slide.css" />
-    <link rel="stylesheet" href="css/angular.css" />
-    <script type="text/javascript" src="js/bundle.js"></script>
+    <link rel="stylesheet" href="dist/css/bundle.css" />
+    <script type="text/javascript" src="dist/js/bundle.js"></script>
 </head>
 <body ng-controller="MainCtrl">
     <div id="body-container" ng-view ng-class="slide">
